# agentic-file-manager-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  test_clustering.py  vercel.json
api/: Dockerfile  app.py  env.py  index.py
backend/: __init__.py  inference.py  main.py
frontend/: vite.config.js
frontend/src/: App.jsx  api.js
server/: app.py
src/: App.jsx  index.css
