[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_file_organizer"
version = "1.0.0"
description = "AI agent environment for real-world file categorization."
authors = [
    { name = "Kanak Megha" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "openai",
    "requests"
]
requires-python = ">=3.10"

[project.scripts]
server = "app:app"

[project.entry-points."openenv.envs"]
semantic_organizer_v1 = "env:FileOrganizerEnv"

[tool.setuptools.packages.find]
where = ["."]